--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="comprehensive coverage, full insurance, asset protection, financial security, risk management">
     <title>Comprehensive Coverage - Secure Your Assets from Unforeseen Risks</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://prettygracia.github.io/sd-insurance-trend/">
+    <meta name="google-site-verification" content="vQmSYckz8pc7RaA1C71jtqMpoVBqF6KSmc3ANvqtJzc" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SHQ5S1DBQT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SHQ5S1DBQT');
+</script>
 </head>
 <body>
     <header>
